Optimize `new ArrayList()` allocations whenever possible (#10573)
To avoid resizing at runtime, it is better to use `ArrayList` with a predefined size.
In some cases it is possible from the context of the list we are creating

* Fix typos in Javadocs of the affected classes according to IDE suggestions
* Use diamond operators for modern Java in the affected classes
* pattern matching expressions for `if` where IDE suggested
* Use `switch` in one place instead of `if..else`. Again: good suggestion from IDE
* Fix Nullability for the router hierarchy
* Have to add "redundant" cast in the `XPathRouter` to make NullAway happy